apps/cli/crates/onequery-cli/src/commands/snapshots/onequery__commands__source__tests__render_source_list_output_includes_required_columns.snap
---
source: crates/onequery-cli/src/commands/source.rs
expression: "output.lines.join(\"\\n\")"
---
SOURCE KEY   PROVIDER  INTERFACES  STATUS
warehouse    postgres  query       active
github_main  github    api         active
