apps/cli/crates/onequery-cli/src/commands/snapshots/onequery__commands__source__tests__render_source_show_output_includes_query_command_with_query_interface.snap
---
source: crates/onequery-cli/src/commands/source.rs
expression: "output.lines.join(\"\\n\")"
---
Source: warehouse
Display Name: Warehouse
Provider: postgres
Status: active
Interfaces: query
Query command: onequery query exec --source warehouse --sql "select 1"
