apps/cli/crates/onequery-cli/src/commands/snapshots/onequery__commands__source__tests__render_source_test_output_includes_supported_failure_details.snap
---
source: crates/onequery-cli/src/commands/source.rs
assertion_line: 881
expression: "output.lines.join(\"\\n\")"
---
Source: warehouse
Display Name: Warehouse
Provider: postgres
Status: error
Test: failed
Message: Connection test failed.
Error: password authentication failed
Latency: 123 ms
